--- a/LAHJA/UI/Components/ProFile/Statistics.razor
+++ b/LAHJA/UI/Components/ProFile/Statistics.razor
@@ -10,7 +10,11 @@
             style="border: none;height:700px">
     </iframe> *@
 
-<IframeComponent StyleCss="width:100%;height:700px !important;border:none" IsLoading="true" ServiceId="serv_5c095af3909547e888f2a0636a307ff9" />
+<IframeComponent StyleCss="width:100%;height:700px !important;border:none" 
+IsLoading="true" 
+ServiceId="serv_5c095af3909547e888f2a0636a307ff9" 
+BackupServiceLink="https://modelspeech.onrender.com/dashboard/" />
+
 
     @* <MainPieChart /> *@
     @* < div class="mt-4" />
