--- a/LAHJA/UI/Templates/Profile/TemplateProfile.razor
+++ b/LAHJA/UI/Templates/Profile/TemplateProfile.razor
@@ -13,7 +13,7 @@
 
 
 @if(Template!=null){
-    <SettingshomProfile DataBuild="buildData"  />
+    <TemplateMainProfile DataBuild="buildData" />
 }
 
 @code{
