--- a/LAHJA/Shared/NavMenu.razor
+++ b/LAHJA/Shared/NavMenu.razor
@@ -5,7 +5,7 @@
 @attribute [Authorize]
 
     <div class="mt-4 d-flex flex-column nav-bar_font">
-        <MudLink Style="@("color:" + _iconfill + "!important")" Href="/settings" OnClick="ClickItem">
+    <MudLink Style="@("color:" + _iconfill + "!important")" Href="/dashboard" OnClick="ClickItem">
             <MudIcon Icon="@Icons.Material.Filled.Dashboard" />
             @translations[CurrentLanguage]["Dashboard"]
         </MudLink>
