--- a/LAHJA/UI/Components/ProFile/Settings/AccessTokensTemplate.razor
+++ b/LAHJA/UI/Components/ProFile/Settings/AccessTokensTemplate.razor
@@ -65,25 +65,26 @@
                 }
             };
 
-        cardStates = new()
+        if (_dataBuild != null)
         {
+            cardStates = new()
+                {
 
-            new()
-            {
-                Value="6",
-                Label="Active"
+                    new()
+                    {
+                        Value=_dataBuild.Where(x=>x.IsActive).Count().ToString(),
+                        Label="Active"
 
-            },
+                    },
 
-             new()
-            {
-                 Value="1",
-                Label="UnActive"
-            }
-            ,
-
-
-        };
+                     new()
+                    {
+                         Value=_dataBuild.Where(x=>x.IsActive==false).Count().ToString(),
+                        Label="UnActive"
+                    },
+                    
+                };
+        }
         groupAction.Actions = new()
         {
             new()
