first commit azd 14

--- a/LAHJA/UI/Components/Auth/MainAuth.razor
+++ b/LAHJA/UI/Components/Auth/MainAuth.razor
@@ -62,9 +62,7 @@
                             @if (isshowmian)
                             {
                             @* @if (!_isToLogin){ *@
-                                <MudButton Variant="Variant.Outlined" OnClick="onClickGoogleAccount"
-                                         
-                                           Color="@AppColors.BASE_COLOR_ENUM">
+                                <MudButton Variant="Variant.Outlined" OnClick="onClickGoogleAccount" Color="@AppColors.BASE_COLOR_ENUM">
                                     <img style="width: 1rem; height: 1rem;margin-right:10px" src="css/google-icon.svg" alt="Image Description">
 
                                     @nameAuth[indexAuth] with Google
