--- a/LAHJA/UI/Components/ProFile/Cards/UserAvaterCard.razor
+++ b/LAHJA/UI/Components/ProFile/Cards/UserAvaterCard.razor
@@ -12,10 +12,8 @@
 
         </ActivatorContent>
         <ChildContent>
-            <MudMenuItem>Profile</MudMenuItem>
-            <MudMenuItem>Theme</MudMenuItem>
-            <MudMenuItem>Usage</MudMenuItem>
-            <MudMenuItem>Sign Out</MudMenuItem>
+            <MudMenuItem Href="dashboard/profile">Profile</MudMenuItem>
+            <MudMenuItem Href="logout/false">Sign Out</MudMenuItem>
         </ChildContent>
     </MudMenu>
 </MudContainer>
