--- a/LAHJA/Pages/Auths/ForgetPassword.razor
+++ b/LAHJA/Pages/Auths/ForgetPassword.razor
@@ -1,14 +1,17 @@
-﻿@page "/ForgetPassword"
+﻿
 @page "/ForgetPassword/{Message}"
+@page "/ForgetPassword"
+
 @using LAHJA.UI.Templates.Auth
 @using Microsoft.AspNetCore.Authorization
 
 @attribute [AllowAnonymous]
 
 
-<TemplateForgetPassword Message="@Message" /> 
+<TemplateForgetPassword Email="@Email" Message="@Message" /> 
 
 @code {
 
     [Parameter] public string Message { set; get; }
+    [Parameter] public string Email { set; get; } = "";
 }
