--- a/LAHJA/UI/Components/Auth/ForgetPasswordForm.razor
+++ b/LAHJA/UI/Components/Auth/ForgetPasswordForm.razor
@@ -53,6 +53,14 @@ else
 
     [Parameter] public EventCallback<DataBuildAuthBase> OnSubmited { get; set; }
 
+    [Parameter] public string Email { get => email; set
+        {
+            if (!string.IsNullOrEmpty(value))
+            {
+                email = value;
+                StateHasChanged();
+            }
+    } }
     [Parameter] public string Message { get; set; }
 
     [Parameter] public bool IsDisplay { get => _isVisible; set {
