--- a/LAHJA/UI/Components/Auth/TemplateAuthForm.razor
+++ b/LAHJA/UI/Components/Auth/TemplateAuthForm.razor
@@ -24,20 +24,14 @@
 
 <MudForm style="" id="Auth-Demo-form" @ref="form" onsubmit="onSubmitReCAPTCHA(event)"  @bind-IsValid="@success" @bind-Errors="@errors">
 
-
-   
-
     @if (!IsLogin)
     {
-
         <MudTextField T="string" Disabled="false" Required="true" Label="FirstName" RequiredError="First Name is required!" @bind-Value="@firstName" />
         <MudTextField T="string" Disabled="false" Required="true" Label="LastName" RequiredError="Last Name is required!" @bind-Value="@lastName" />
         <MudTextField T="string" Disabled="false" Required="true" Label="PhoneNumber" RequiredError="Phone Number is required!" @bind-Value="@phoneNumber" />
     }
 
-  @*   <MudTextField T="string" Label="Email" Required="true" RequiredError="Email is required!"
-    Validation="@(new EmailAddressAttribute() {ErrorMessage = "The email address is invalid"})" @bind-Value="@email" />
- *@
+
    <EmailField  Class="my-5" FullWidth Label="Email" Required="true"  Value="@email" />
     
     <MudTextField T="string" Label="Password" HelperText="Choose a strong password" @ref="pwField1"
@@ -60,43 +54,20 @@
     <br />
     <div class="d-flex align-center justify-space-between">
         <MudCheckBox T="bool" Required="true" RequiredError="You must agree" Label="I agree!" />
-       @*  <span style="height:40px">
-            <CustomButton OnClick="Submit" Text="@(IsLogin ? "Login" : "Register")" IsProcessing="isProcessing" class="px-10 py-3" />
-        </span> *@
-   
         <MudButton id="submitButton" Variant="Variant.Filled" Color="@AppColors.BASE_COLOR_ENUM" OnClick="Submit" Disabled="@(!success)" Class="ml-auto">@(IsLogin ? "Login" : "Register")</MudButton>
-
     </div>
 
 
-
-
     @if (IsLogin)
-
     {
-
         <div class="d-flex align-center justify-space-between">
-
             <MudButton OnClick="onClickForgetPassword" Color="@AppColors.BASE_COLOR_ENUM">Forgot Password?</MudButton>
         </div>
-
-       @*  <div class="d-flex align-center justify-space-between">
-
-         <MudButton OnClick="showConfirmationEmail" Color="Color.Primary">Confirm Email</MudButton> 
-
-        <MudButton OnClick="showResetPassword" Color="@AppColors.BASE_COLOR_ENUM">Reset Password</MudButton>
-    
-        </div> *@
     }
-    else
-    {
-
-        // Re send Confirm email
-
-        <MudButton OnClick="onSubmitResendConfirmEmail"
-            class="@AppTextStyle.TEXT_TRANSFORM_NORMAL" Color="@AppColors.BASE_COLOR_ENUM">Re Send Confirm Email</MudButton>
-        @*<ForgetPasswordForm IsDisplay="visibleForgetPassword" OnSubmited=OnSubmitedForgetPassword /> *@
-    }
+       <div class="d-flex align-center justify-space-between">
+         @* Re send Confirm email *@
+        <MudButton OnClick="onSubmitResendConfirmEmail" class="@AppTextStyle.TEXT_TRANSFORM_NORMAL" Color="@AppColors.BASE_COLOR_ENUM">Re Send Confirm Email</MudButton>
+    </div>
 
     @if (errors != null && errors.Count() > 0)
     {
@@ -120,39 +91,12 @@
 
     bool isProcessing=false;
     bool isLoading=false;
-    // bool visibleForgetPassword { get; set; }
-    // string[] errors { get; set; }
 
-    // private CardAuth<DataBuildAuthBase> cardAuth = new CardAuth<DataBuildAuthBase>();
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-        {
-            // isLoading = false;
-            // StateHasChanged();
-        }
-    }
+
     async Task Submit(){
 
-        // isProcessing = true;
-        // isLoading = true;
-        // StateHasChanged();
         DataBuildAuthBase data;
-
-        // var result = await JSRuntime.InvokeAsync<string>("onSubmitReCAPTCHA");
-        // if (result == null)
-        // {
-
-        //     errors = new string[] { MapperMessages.Map(
-        //             global::Shared.Constants.ErrorMessages.CHECK_FROM_RECAPTCHA_EN,
-        //             global::Shared.Constants.ErrorMessages.CHECK_FROM_RECAPTCHA_EN) };
-
-        // }
-        // else
-        {
-
-
             if (IsLogin)
             {
                 data=new DataBuildAuthBase()
@@ -182,7 +126,7 @@
             {
                 await OnSubmit.InvokeAsync(data);
             }
-        }
+        
 
         isProcessing = false;
         // await Task.Delay(1000);
