--- a/LAHJA/UI/Templates/Auth/TemplateForgetPassword.razor
+++ b/LAHJA/UI/Templates/Auth/TemplateForgetPassword.razor
@@ -10,19 +10,20 @@
 @if(Template!=null){
 
     <div Class="p-5 m-auto">
-        <MudText Typo="Typo.h6">
+     @*    <MudText Typo="Typo.h6">
             <h4 class="d-flex align-center justify-content-center flex-column">
                 Forget Password
             </h4>
-        </MudText>
+        </MudText> *@
 
-        <ForgetPasswordForm  Message="@Message" OnSubmited="Template.BuilderComponents.SubmitedForgetPassword" />
+        <ForgetPasswordForm Email="@Email"  Message="@Message" OnSubmited="Template.BuilderComponents.SubmitedForgetPassword" />
   
    </div>
 }
 @code{
 
- [Parameter] public string Message { set; get; }
+    [Parameter] public string Message { set; get; }
+    [Parameter] public string Email { set; get; } = "";
 
 
     // protected override void OnInitialized()
