--- a/LAHJA/_Imports.razor
+++ b/LAHJA/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Domain.ShareData
+@using LAHJA.Helpers.Services
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -20,3 +22,5 @@
 
 @using LAHJA.UI.Templates
 @using MudBlazor.ThemeManager
+@using Microsoft.AspNetCore.Authorization
+@using global::Shared.Constants.Router
